✅ test(collector): T11 SmokeMockitoBase 신규 빈 추가 + PMD 정적분석 통과
REQ-065: SmokeMockitoBase에 신규 시장지표 빈 추가(MarketIndicatorRepository, VixCollectionService 등).
application.yml aaa.market-indicator.* 기본값 추가. PMD/Spotless 전 파일 통과.

🗿 MoAI <email@mo.ai.kr>