@@ -22,6 +22,13 @@ import org.springframework.web.client.RestClient;
 @DisplayName("CboeVixClient 단위 테스트")
 class CboeVixClientTest {
 
+    private static final String SAMPLE_CSV =
+            """
+            DATE,OPEN,HIGH,LOW,CLOSE
+            01/02/2026,16.91,17.43,16.91,17.20
+            01/05/2026,17.52,18.01,17.52,17.89
+            """;
+
     private MockRestServiceServer mockServer;
     private CboeVixClient client;
 
@@ -33,18 +40,12 @@ class CboeVixClientTest {
         client = new CboeVixClient(cboeRestClient);
     }
 
-    private static final String SAMPLE_CSV =
-            """
-            DATE,OPEN,HIGH,LOW,CLOSE
-            01/02/2026,16.91,17.43,16.91,17.20
-            01/05/2026,17.52,18.01,17.52,17.89
-            """;
-
     @Nested
     @DisplayName("fetchHistory — 전체 CSV 파싱")
     class FetchHistory {
 
         @Test
+        @SuppressWarnings("PMD.UnitTestContainsTooManyAsserts") // OHLC 4컬럼 + 날짜 + 소스 전체 검증
         @DisplayName("정상 CSV — DATE 파싱(MM/dd/yyyy), OHLC 4컬럼, source=CBOE (REQ-020/021)")
         void parsesOhlcAndDate() {
             mockServer
@@ -57,7 +58,7 @@ class CboeVixClientTest {
             List<MarketIndicatorRow> rows = client.fetchHistory();
 
             assertThat(rows).hasSize(2);
-            MarketIndicatorRow first = rows.get(0);
+            MarketIndicatorRow first = rows.getFirst();
             assertThat(first.indicatorCode()).isEqualTo(IndicatorCode.VIX);
             assertThat(first.tradeDate()).isEqualTo(LocalDate.of(2026, 1, 2));
             assertThat(first.openValue()).isEqualByComparingTo("16.91");
@@ -119,7 +120,7 @@ class CboeVixClientTest {
             List<MarketIndicatorRow> rows = client.fetchDaily(LocalDate.of(2026, 1, 2));
 
             assertThat(rows).hasSize(1);
-            assertThat(rows.get(0).tradeDate()).isEqualTo(LocalDate.of(2026, 1, 2));
+            assertThat(rows.getFirst().tradeDate()).isEqualTo(LocalDate.of(2026, 1, 2));
         }
 
         @Test
@@ -161,7 +162,7 @@ class CboeVixClientTest {
             List<MarketIndicatorRow> rows = client.fetchHistory();
 
             assertThat(rows).hasSize(1);
-            assertThat(rows.get(0).closeValue()).isEqualByComparingTo(new BigDecimal("17.89"));
+            assertThat(rows.getFirst().closeValue()).isEqualByComparingTo(new BigDecimal("17.89"));
         }
     }
 }
